--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "crwn-clothing-server",
   "version": "1.0.0",
   "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
+    "node": "14.15.0",
+    "npm": "7.6.3"
   },
   "scripts": {
     "client": "cd client && npm start",
@@ -11,7 +11,7 @@
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install  && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install &&  npm audit fix && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
